--- a/app/app/templates/public/sign_up.html
+++ b/app/app/templates/public/sign_up.html
@@ -10,6 +10,23 @@ sign up
             <h1>Sign Up</h1>
             <hr>
             
+            <form action="sign_up" method="POST">
+                <div class="form-group">
+                    <label>Username</label>
+                    <input class="form_control" type="text" name="username">
+                </div>
+
+                <div class="form-group">
+                    <label>Email</label>
+                    <input class="form_control" type="email" name="email">
+                </div>
+
+                <div class="form-group">
+                    <label>Password</label>
+                    <input class="form_control" type="password" name="password">
+                </div>
+                <button type="submit" cls="btn btn-primary">Sign Up</button>
+            </form>
         </div>
     </div>
 </div>
