--- a/app/app/templates/public/templates/public_template.html
+++ b/app/app/templates/public/templates/public_template.html
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/admin/dashboard">Admin <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/admin/dashboard">Admin </a>
                 </li>
             </ul>
         </div>
