--- a/app/app/templates/public/sign_up.html
+++ b/app/app/templates/public/sign_up.html
@@ -12,23 +12,37 @@ sign up
             
             <form action="sign_up" method="POST">
                 {{form.hidden_tag()}}
+                <fieldset class="form-group">
+                    <legend class="border_bottom mb-4">Sign Up</legend>
+                    <div class="form-group">
+                        {{ form.username.label(class="form-control-label")}}
+                        {{form.username(class="form-control form-control-lg")}}
+                    </div>
+                    <div class="form-group">
+                        {{ form.email.label(class="form-control-label")}}
+                        {{form.email(class="form-control form-control-lg")}}
+                    </div>
+                    <div class="form-group">
+                        {{ form.password.label(class="form-control-label")}}
+                        {{form.password(class="form-control form-control-lg")}}
+                    </div>
+                    <div class="form-group">
+                        {{ form.confirm_password.label(class="form-control-label")}}
+                        {{form.confirm_password(class="form-control form-control-lg")}}
+                    </div>
+                </fieldset>
                 <div class="form-group">
-                    <label>Username</label>
-                    <input class="form_control" type="text" name="username">
+                    {{form.submit(class="btn btn-outline-info")}}
                 </div>
-
-                <div class="form-group">
-                    <label>Email</label>
-                    <input class="form_control" type="email"name="email">
-                </div>
-
-                <div class="form-group">
-                    <label>Password</label>
-                    <input class="form_control" type="password" name="password">
-                </div>
-                <button type="submit" cls="btn btn-primary">Sign Up</button>
             </form>
         </div>
     </div>
+</div>
+<div class="border-top pt-3">
+    <small class="text-muted">
+        Already Have an Account?
+        <a href="{{ url_for('login') }}">Sign In</a>
+    </small>
+
 </div>
 {%endblock main%}
