--- a/app/app/templates/public/templates/public_template.html
+++ b/app/app/templates/public/templates/public_template.html
@@ -30,6 +30,9 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/sign-up">Sign Up <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/jinja">Jinja</a>
                 </li>
             </ul>
