corrected typo in logIn to LogIn

--- a/app/app/templates/public/sign_up.html
+++ b/app/app/templates/public/sign_up.html
@@ -37,7 +37,7 @@ sign up
 <div class="border-top pt-3">
     <small class="text-muted">
         Already Have an Account?
-        <a href="{{url_for('logIn')}}">Sign In</a>
+        <a href="{{url_for('LogIn')}}">Sign In</a>
     </small>
 
 </div>
