--- a/app/app/templates/public/login.html
+++ b/app/app/templates/public/login.html
@@ -5,9 +5,61 @@
     <div class="row">
         <div class="col">
             <form action="", method="GET">
+                {{form.hidden_tag()}}
+        <fieldset class="form-group">
+            <legend class="border_bottom mb-4">Log In</legend>
+           
+            <div class="form-group">
+                {{ form.email.label(class="form-control-label")}}
+               
+                <!---handling errors in forms-->
+                {%if form.email.errors %}
+                 {{form.email(class="form-control form-control-lg is-invalid")}}
+                 <div class="invalid-feedback">
+                    {% for error in form.email.errors%}
+                       <span>{{error}}</span>
+                    {% endfor %}
+                 </div>
+                {%else%}
+                 {{form.email(class="form-control form-control-lg")}}
+                {%endif%}
+            </div>
+            <div class="form-group">
+                {{ form.password.label(class="form-control-label")}}
                 
+                <!--handling errors in forms--->
+                {%if form.password.errors %}
+                 {{form.password(class="form-control form-control-lg is-invalid")}}
+                 <div class="invalid-feedback">
+                    {% for error in form.password.errors%}
+                       <span>{{error}}</span>
+                    {% endfor %}
+                 </div>
+                {%else%}
+                 {{form.password(class="form-control form-control-lg")}}
+                {%endif%}
+            </div>
+            <div class="form-check">
+                {{form.remember(class="form-check-input")}}
+                {{form.remember.label(class="form-check-label")}}
+            </div>
+        </fieldset>
+        <div class="form-group">
+            {{form.submit(class="btn btn-outline-info")}}
+        </div>
+        <small class="text-muted ml-2">
+            <a href="#">Forgot Password</a>
+        </small>
             </form>
         </div>
     </div>
 </div>
+<div class="border-top pt-3">
+    <small class="text-muted">
+        Do you Need an Account?
+        <a href="{{url_for('sign_up')}}">Sign Up</a>
+    </small>
+
+</div>
+
 {%endblock main%}
